# coding-buddy

./: .env.example  Coding Buddy Archtecture.excalidraw  README.md  architecture.html  hello.py  main.py  pyproject.toml
.ai-agent/: config.toml
agent/: agent.py  events.py  session.py
client/: llm_client.py  response.py
config/: config.py  loader.py
context/: manager.py
prompts/: system.py
tools/: base.py  registry.py
tools/builtin/: __init__.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
ui/: tui.py
utils/: errors.py  paths.py  text.py
