[project]
name = "claude-replica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "ddgs>=9.11.1",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "platformdirs>=4.9.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
    "tiktoken>=0.12.0",
]
